--- a/style.css
+++ b/style.css
@@ -19,12 +19,11 @@ main{
 }
 
 .clock{
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     background-color: aqua;
     position: relative;
     border-radius: 50%;
-    scale: 2;
 }
 .needle{
     width: 3px;
@@ -37,14 +36,17 @@ main{
 }
 .needle.hour{
     transform: translate(-50% , -100%) rotate(0deg);
+    /* height: 40px; */
+    background-color: red;
 }
 .needle.minute{
     transform: translate(-50% , -100%) rotate(0deg);
-    height: 100px;
+    /* height: 60px; */
+    background-color: blue;
 }
 .needle.second{
     transform: translate(-50% , -100%) rotate(0deg);
-    height: 100px;
+    height: 80px;
     background-color: black;
 }
 .center_point{
@@ -69,7 +71,14 @@ main{
     border-radius: 50%;
 }
 
+.time{
+    color: red;
+    position: absolute;
+    top: 90%;
+}
 .date{
-color: #aaa;
+color: red;
 text-transform: uppercase;
+position: absolute;
+top:80%;
 }
